fix: id not implied

--- a/.github/workflows/docker-release.yaml
+++ b/.github/workflows/docker-release.yaml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Tag with GitVersion
         uses: michielvha/gitversion-tag-action@v5
+        id: gitversion
         with:
           configFilePath: 'gitversion.yml'
 
