fix: update branch trigger for Docker release action to main

--- a/.github/workflows/docker-release.yaml
+++ b/.github/workflows/docker-release.yaml
@@ -3,7 +3,7 @@ name: Example Usage of Docker Release Action
 on:
   push:
     branches:
-      - release/*
+      - main
     paths-ignore:
       - 'docs/**'
       - '*.md'
